# krunner-vscode

./: README.md  pyproject.toml
krunner_vscode/: __main__.py
package/: com.github.j1g5awi.vscode.service  plasma-runner-vscode.desktop
scripts/: install.sh  uninstall.sh
